--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
-torch==1.7.0
-tqdm
-boto3
-requests
-pandas
+boto3==1.26.94
+botocore==1.29.94
+ffmpeg==1.4
+ffmpeg_python==0.2.0
+numpy==1.24.2
+pandas==1.5.3
+requests==2.28.2
+torch==2.0.0
+torchvision==0.15.1
+tqdm==4.64.1
+av==10.0.0
+
